2004-05-11	blytkerchan
	* Makefile.am [SUBDIRS]: include libmemory
	* bootstrap: bootstrap libmemory
	* configure.ac: require autoconf 2.57 and up, not 2.59 and up
	configure libmemory
	* libconf.c (libconf_init): s/new_hash/hash_new/g
	(libconf_fini_helper): constify parameters, cast to compensate
	(libconf_fini): s/delete_hash/hash_free/g
	(libconf_phase5_helper): constify parameters
	* libconf_optparam.c (libconf_optparam_dup): ditto
	(libconf_optparams_dup): ditto

	* libconf.c: include stdarg.h
	(libconf_getopt): implement
	(libconf_setopt): ditto
	* libconf.h [libconf_t]: comment the fields
	* libconf_optparam.c: include libreplace/macros.h
	(libconf_optparam_new): trim the string values

2004-04-12	blytkerchan
	* configure.ac: define Automake conditional MT_SAFE (always true for the time being)
	* libconf.c (libconf_init): zero out handle's argv field on allocation
	(libconf_phase1): test that aregc is > 0 (i.e. make argc == -1 break the loop)
	prevent in-param parameters from being counted 
	fix indentation error
	(libconf_phase2): don't do anything if there are no defaults

2004-04-08	blytkerchan	license application & killing memory bugs
	* libconf.c: apply license
	(libconf_init): handle the possibility that the passed-in filenames are NULL
	copy the defaults
	copy the keys into the hashes (call strdup)
	(libconf_fini_helper): new function
	(libconf_fini): free the values of the hash before deleting the hash
	free the defaults
	(libconf_phase1): strdup the hash keys when putting them in the hash
	(libconf_phase4): ditto
	* libconf.h: apply license
	(libconf_optparam_free): new function
	(libconf_optparams_free): ditto
	* libconf_config.h.in: apply license
	* libconf_opt.c: ditto
	* libconf_optparam.c: ditto
	(libconf_optparam_free): new function
	(libconf_optparams_free): ditto

2004-04-05	blytkerchan
	* tests/test1.c: new file
	* tests/global_conf_test1: ditto
	* tests/Makefile.am: ditto
	* Makefile.am [SUBDIRS]: add subdirs to be compiled