@@ -1,11 +1,0 @@
-#! /bin/bash -x
-libtoolize && \
-aclocal && \
-autoheader && \
-autoconf && \
-automake --add-missing && \
-cd libcontain && sh bootstrap && cd .. && \
-cd libmemory && sh bootstrap && cd .. && \
-true
-
-
